Possibly fix entity ticking issue.